package adapter;

//総和を求める
public abstract class CalcSum {
	public abstract int nSum(int n); //0からnまでの総和
	public abstract int nmSum(int n, int m); //nからmまでの総和
}
